docs/css/style.css
/* ... */
.title p{
    text-align: justify;
    align-self: center;
    padding-inline: 5%;
    font-size: 1em;
    line-height: 1.6;
    color: #333;
}

.school{
    display: flex;
    flex-direction: column;
    align-self: center;
}

.school h3{
    margin: 0 0;
    padding: 10px 7%;
    font-size: 1.2em;
    color: #021f45;
}

.school h4{
    margin: 0 0;
    padding: 10px 7%;
    font-size: 1em;
    color: #021f45;
}

/*
** Responsive design for the personal info education section: smartphones
*/

@media (max-width: 768px) {
    .edu h2{
        text-align: center;
        font-size: 1.5em;
    }

    .title{
        grid-template-columns: 1fr;
        align-items: center;
        padding: 15px 0;
    }

    .title p{
        text-align: center;
    }

    .school h3,
    .school h4{
        text-align: center;
        margin: 0 0;
    }
}

/*
** Style for the work section
*/

.work{
    /* Position and structure of the info box in the page */
    width: 100%;

    /* Style of the info box in the page */
    margin: 20px 0;
    padding: 10px 0;
    background-color: #fff;
    box-shadow: 0px 5px 4px rgba(0,0,0,0.1);

    /* Style of the header text */
    font-family: 'Montserrat', sans-serif;
}

.work h2{
    font-size: 1.8em;
    padding-inline: 5%;
    color: #d16d16;
}

.job{
    /* Style of the box */
    width: 95%;
    border-radius: 8px;
    justify-self: center;

    /* Position and structure of the info box in the page */
    display: grid;
    grid-template-columns: 2fr 3fr;

    /* Style of the info box in the page */
    margin: 20px 0;
    padding: 10px 0;
    background-color: #f0f2f4;
    box-shadow: 0px 5px 4px rgba(0,0,0,0.1);

    /* Style of the header text */
    font-family: 'Montserrat', sans-serif;
}

.job p{
    align-self: center;
    text-align: justify;
    padding-inline: 5%;
    font-size: 1em;
    line-height: 1.6;
    color: #333;
}

.company{
    display: flex;
    flex-direction: column;
    align-self: center;
}

.company h3{
    margin: 0 0;
    padding: 10px 7%;
    font-size: 1.2em;
    color: #021f45;
}

.company h4{
    margin: 0 0;
    padding: 10px 7%;
    font-size: 1em;
    color: #021f45;
}

/*
** Responsive design for the personal info work section: smartphones
*/

@media (max-width: 768px) {
    .work h2{
        text-align: center;
        font-size: 1.5em;
    }

    .job{
        grid-template-columns: 1fr;
        align-items: center;
    }

    .job p{
        text-align: center;
    }

    .company h3,
    .company h4{
        margin: 0 0;
        text-align: center;
    }
}

/*
**
** Style for the projects.html page
**
*/

.projects-info{
    /* Position and structure of the info box in the page */
    width: 100%;

    /* Style of the info box in the page */
    margin: 20px 0;
    padding: 10px 0;
    background-color: #fff;
    box-shadow: 0px 5px 4px rgba(0,0,0,0.1);

    /* Style of the header text */
    font-family: 'Montserrat', sans-serif;
}

.projects-info h2{
    padding-inline: 5%;
    font-size: 1.8em;
    color: #d16d16;
}

.projects-info p{
    padding-inline: 5%;
    font-size: 1em;
    line-height: 1.6;
    color: #333;
}

.language{
    width: 100%;
    margin: 20px 0;
    padding: 10px 0;
    background-color: #fff;

    /* Style of the languages box in the page */
    margin: 20px 0;
    padding: 10px 0;
    background-color: #fff;
    box-shadow: 0px 5px 4px rgba(0,0,0,0.1);

    /* Style of the header text */
    font-family: 'Montserrat', sans-serif;
}

.language h2{
    padding-inline: 5%;
    color: #d16d16;
    font-size: 1.8em;
}

.language p{
    padding-inline: 5%;
    font-size: 1em;
    line-height: 1.6;
    color: #333;
}

.projects-list{
    width: 100%;
    margin: 20px 0;
    padding: 10px 0;

    /* Position of the projects inside the box */
    display: flex;
    flex-wrap: wrap;
    gap: 20px;
    justify-content: center;
}

.project{
    width: 500px;

    display: grid;
    grid-template-columns: 2fr 3fr;
    justify-items: center;
    align-items: center;
    
    /* Style of the languages box in the page */
    margin: 20px 0;
    padding: 10px 0;
    background-color: #f0f2f4;
    box-shadow: 0px 5px 4px rgba(0,0,0,0.1);
}

.project h3{
    grid-column: 1 / 3;
    padding-inline: 10%;
    font-size: 1.5em;
    color: #021f45;
}

.project a,
.project img{
    grid-column: 1;
    padding-inline: 5%;
    height: 220px;
}

.project p{
    grid-column: 2;
    padding-inline: 5%;
    font-size: 1em;
    line-height: 1.6;
    color: #333;
}

/*
** Responsive design for the contact form section: smartphones
*/

@media (max-width: 768px) {
    .project{
        width: 90%;
        grid-template-columns: 1fr;
        gap: 20px;
    }

    .project h3{
        text-align: center;
    }
}


#stay-tuned{
    font-size: 1.5em;
    color: #d16d16;
    justify-self: center;
    background-color: #021f45;
    font-family: 'Montserrat', sans-serif;
    border-radius: 8px;
    padding: 10px 10px;
}

/*
**
** Style for the contact.html page
**
*/

/*
** Style for the contact form section
*/

.contact{
    /* Position and structure of the form box in the page */
    width: 100%;
    display: grid;
    grid-template-columns: 2fr 3fr;

    /* Style of the form box in the page */
    margin: 2% 0%;
    padding: 2% 0%;
    background-color: #fff;
    box-shadow: 0px 5px 4px rgba(0,0,0,0.1);

    /* Style of the form text */
    font-family: 'Montserrat', sans-serif;
}

.contact h2{
    padding-inline: 10%;
    font-size: 1.8em;
    color: #d16d16;
}

.contact form{
    grid-column: 1;
    width: 100%;

    display: flex;
    flex-direction: column;
    gap: 20px;
    padding-inline: 10%;
    align-items: stretch;
}

.contact form label{
    display: flex;
    flex-direction: column;
    gap: 10px;
    align-self: flex-start;
    color: #021f45;
    font-size: 1em;
}
/* ... */

